--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@ function halo() {
     <!-- KESAN & PESAN -->
     <section id="kesan" class="bg-white bg-opacity-90 p-6 rounded-xl shadow-xl border-4 border-green-500">
       <h2 class="text-3xl font-['Righteous'] text-green-800 text-center mb-4">🔥 Kesan & Pesan 🔥</h2>
-      <p class="mb-2">Belajar web membuat saya terbiasa menghadapi error, memahami HTML, CSS, JS, dan Tailwind. Proses ini melatih kesabaran, ketelitian, dan kreativitas.</p>
-      <p class="mb-2">Tugas dan proyek kecil memberi tantangan baru. Belajar dengan teman dan bimbingan guru membuat pengalaman lebih menyenangkan.</p>
+      <p class="mb-2">Belajar web membuat saya terbiasa menghadapi error, memahami HTML, CSS, JS, dan Tailwind. Proses ini melatih kesabaran, ketelitian, dan kreativitas saya.</p>
+      <p class="mb-2">Tugas dan proyek kecil memberi tantangan baru. Belajar dengan teman dan bimbingan bu dosen serta asisten Lab membuat pengalaman lebih menyenangkan.</p>
       <video controls class="mx-auto rounded-lg shadow-md w-full max-w-lg border-4 border-yellow-300">
         <source src="video-saya.mp4" type="video/mp4">
         Browser Anda tidak mendukung video.
@@ -122,8 +122,9 @@ function halo() {
 
   <script>
     function halo() {
-      alert("Halo! Selamat Datang di Dunia JavaScript 🌿🎶");
+      alert("Welcome to world valhala Munthe 🌿🎶");
     }
   </script>
 </body>
 </html>
+
