Fix HTML structure and update content

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ function halo() {
       <p class="mb-2">Belajar web membuat saya terbiasa menghadapi error, memahami HTML, CSS, JS, dan Tailwind. Proses ini melatih kesabaran, ketelitian, dan kreativitas saya.</p>
       <p class="mb-2">Tugas dan proyek kecil memberi tantangan baru. Belajar dengan teman dan bimbingan bu dosen serta asisten Lab membuat pengalaman lebih menyenangkan.</p>
       <video controls class="mx-auto rounded-lg shadow-md w-full max-w-lg border-4 border-yellow-300">
-        <source src="video-saya.mp4" type="video/mp4">
+        <source src="videoll.mp4" type="video/mp4">
         Browser Anda tidak mendukung video.
       </video>
     </section>
@@ -127,4 +127,5 @@ function halo() {
   </script>
 </body>
 </html>
+
 
